# folf-namespace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.ci/: compile.bat  compile.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  integration-tests.yml  linux-testing.yml  macos-testing.yml  windows-testing.yml
ci/: compile.bat  compile.sh
docs/: windows-dev-setup.md
examples/: CMakeLists.txt  console-utils-test.cpp  prime-sum-benchmark.cpp  time-operations.cpp
folf/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  calcTools.cpp  calcTools.hpp  conTool.cpp  conTools.cpp  conTools.hpp  numTool.cpp  numTool.hpp  numberOperations.cpp  timeTool.cpp  timeTool.hpp  timeTools.cpp  timeTools.hpp
folf-namespace/: CMakeLists.txt  algorithms.cpp  consoleOperations.cpp  folf-info.hpp.in  folf.hpp  legacy.cpp  numberOperations.cpp  timeOperations.cpp
src/: CMakeLists.txt  TODO  aboutFolf.cpp  algorithms.cpp  benchmarking.cpp  console-utils-test.cpp  consoleOperations.cpp  consoleUtils.cpp  folf-include.hpp  folf.hpp  legacy.cpp  legacyFunctions.cpp  numberOperations.cpp  prime-sum-benchmark.cpp  prime.cpp  random.cpp  time-operations.cpp  timeCalculation.cpp  timeOperations.cpp  timeUtils.cpp
src/folf-namespace/: benchmarking.cpp  consoleUtils.cpp  folf-include.h  folf.h  folf.hpp  legacyFunctions.cpp  pch.h  prime.cpp  random.cpp  timeCalculation.cpp
src/prime-number-generator/: main.cpp  pch.h
tests/: CMakeLists.txt  algorithmsTest.cpp  calcToolsTest.cpp  conToolsTest.cpp  infoTest.cpp  timeToolsTest.cpp
